# bevy-discord-rpc

./: Cargo.toml  readme.md
examples/: name.rs  rpc.rs
examples/helpers/: mod.rs
src/: activity.rs  client.rs  lib.rs
