[package]
name = "bevy-discord-rpc"
version = "0.1.0"
edition = "2024"

[features]
unstable_name = ["discord-presence/unstable_name"]

[[example]]
name = "name"
required-features = ["unstable_name"]

[dependencies]
bevy = { version = "0.17.3", default-features = false }
bon = "3.8.1"
# my fork of discord-presence that fixes windows pipe disconnection issues
# todo: replace with upstream once the pr gets merged
# https://github.com/jewlexx/discord-presence/pull/151
discord-presence = { git = "https://github.com/isitreallyalive/discord-presence", rev = "90e85b7" }
pastey = "0.2.1"
quork = "0.9.1"
