[package]
name = "bevy-discord-rpc"
version = "0.1.0"
edition = "2024"

[features]
unstable_name = ["discord-presence/unstable_name"]

[[example]]
name = "name"
required-features = ["unstable_name"]

[dependencies]
bevy = { version = "0.17.3", default-features = false }
bon = "3.8.1"
discord-presence = "3.1.0"
pastey = "0.2.1"
quork = "0.9.1"
