[package]
name = "bevy-discord-rpc"
version = "0.1.0"
edition = "2024"

[features]
unstable_name = ["discord-presence/unstable_name"]

[[example]]
name = "name"
required-features = ["unstable_name"]

[dependencies]
bevy = { version = "0.18", default-features = false }
bon = "3.8"
discord-presence = "3.1"
quork = { version = "0.9", default-features = false, features = ["macros", "traits"] }
